# solicare-central-home-hub

./: .clang-format  .gitignore  CMakeLists.txt  launcher.cc
.run/: solicare_central_hub_launcher.run.xml
include/: solicare_central_home_hub.hpp  solicare_central_hub_server.h
include/server/: async_websocket_server.h  async_websocket_server.hpp  websocket_server_common.h  websocket_server_common.hpp
include/utils/: http_client.hpp  json_utils.hpp  jwt_utils.hpp  logging_utils.hpp  opencv_utils.h  opencv_utils.hpp  system_utils.hpp
src/: async_websocket_server.cc  async_websocket_server.cpp  solicare_central_hub_server.cc  solicare_hub_api_client.cpp  solicare_hub_camera.cpp  solicare_hub_launcher.cpp  solicare_hub_menu_ui.cpp  solicare_hub_monitor.cpp  solicare_hub_session.cpp  solicare_hub_wearable.cpp
